feat: refactor various entities and services for improved readability and functionality